--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "style-loader": "^3.3.2",
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
   }
 }
